--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
+    "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.5"
