--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
+version: "3.1"
+
 services:
   db:
     image: mysql:latest
     container_name: mysql-container
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: chatapp
-      MYSQL_USER: chat_user
-      MYSQL_PASSWORD: chat_password
+      MYSQL_ROOT_PASSWORD: my-secret-pw
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
     ports:
       - "3307:3306"
     volumes:
@@ -19,7 +21,7 @@ services:
     restart: always
     environment:
       PMA_HOST: db
-      MYSQL_ROOT_PASSWORD: jolly1228
+      MYSQL_ROOT_PASSWORD: my-secret-pw
     ports:
       - "8080:80"
 
