--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,16 @@
+version: "3.1"
+
 services:
   db:
-    image: mysql:latest
-    container_name: mysql-container
+    image: mysql:5.7
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: chatapp
-      MYSQL_USER: chat_user
-      MYSQL_PASSWORD: chat_password
+      - MYSQL_ROOT_PASSWORD=new-root-password
+      - MYSQL_DATABASE=chatapp
     ports:
       - "3307:3306"
     volumes:
-      - db-data:/var/lib/mysql
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
-    container_name: phpmyadmin-container
-    restart: always
-    environment:
-      PMA_HOST: db
-      MYSQL_ROOT_PASSWORD: jolly1228
-    ports:
-      - "8080:80"
+      - db_data:/var/lib/mysql
 
 volumes:
-  db-data:
+  db_data:
