--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,33 @@
 version: "3.1"
 #変更後です
 services:
+  nodejs:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./server.js:/app/server.js
+    ports:
+      - "3040:3040"
+    command: nodemon server.js
+    depends_on:
+      - db
   db:
-    image: mysql:5.7
+    container_name: db
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=new-root-password
-      - MYSQL_DATABASE=chatapp
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
     ports:
       - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./initdb.d:/docker-entrypoint-initdb.d
 
 volumes:
   db_data:
