--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./server.js:/app/server.js
     ports:
-      - "3040:3040"
+      - "${PORT}:${PORT}"
     command: nodemon server.js
     depends_on:
       - db
