--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,6 +1,7 @@
 [mysqld]
 character-set-server=utf8mb4
 explicit_defaults_for_timestamp = 1
+bind-address = 0.0.0.0
 
 [mysql]
 default-character-set=utf8mb4
