--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -5,6 +5,7 @@ bind-address = 0.0.0.0
 
 [mysql]
 default-character-set=utf8mb4
+collation-server=utf8mb4_unicode_ci
 
 [client]
 default-character-set=utf8mb4
